--- a/composer.json
+++ b/composer.json
@@ -23,10 +23,7 @@
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.24",
         "laravel/sail": "^1.41",
-        "mockery/mockery": "^1.6",
-        "nunomaduro/collision": "^8.6",
-        "pestphp/pest": "^3.8",
-        "pestphp/pest-plugin-laravel": "^3.2"
+        "mockery/mockery": "^1.6"
     },
     "autoload": {
         "psr-4": {
